@@ -42,9 +42,9 @@ public class CorePlugin implements IPlugin
 We recommend using the `@CompileFxml` annotation on the main plugin class
 (the one that implements IPlugin) of your project.
 
-As the default behaviour, the Controller abstract class that you extended, tries to find
+As the default behavior, the Controller abstract class that you extended, tries to find
 the compiled view in the same package as the FXML file and, if it finds it, it will use it 
-but needs reflection.
+but rellies on reflection.
 ```java
 protected void loadFXML()
 {
@@ -81,16 +81,6 @@ protected void loadFxml()
 }
 ```
 
-Also, the annotations processor can override the method at compile time for you, but, 
-to do this, you need to add the following args to the compile command:
-```
---add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED
---add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED
---add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED
---add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
---add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED
-```
-
 Note: Remember that, for each FXML file with name exampleUi.fxml, the annotations processor 
 expects a class named ExampleUiController.java in the same package as the FXML. With this set,
 it will be generating a class named ExampleUi$View.java in the same package.
@@ -113,7 +103,8 @@ Add the following dependency to your `pom.xml`:
     <dependency>
         <groupId>com.github.trt-pos</groupId>
         <artifactId>fxml2java</artifactId>
-        <version>0.2.1</version>
+        <version>v0.3.0</version>
+        <scope>provided</scope>
     </dependency>
 </dependencies>
 ```
@@ -131,7 +122,7 @@ Add the following compiler plugin configuration to your `pom.xml`:
             <path>
                 <groupId>com.github.trt-pos</groupId>
                 <artifactId>fxml2java</artifactId>
-                <version>0.2.1</version>
+                <version>v0.3.0</version>
             </path>
             <path>
                 <groupId>org.lebastudios.theroundtable</groupId>
@@ -143,9 +134,10 @@ Add the following compiler plugin configuration to your `pom.xml`:
 </plugin>
 ```
 
-Note: Limitations of the original implementation that are still present, the fxml2java processor 
-needs access to the classes you are using in your FXML files. This means that you, for example, use 
+Note 1: Limitations of the original implementation that are still present, the fxml2java processor 
+needs access to the classes you are using in your FXML files. This means that if you, for example, use 
 the IconButton class included in the TRT framework, you need to add the dependency to the
-annotationProcessorPaths as we do in the example above. 
+annotationProcessorPaths as we do in the example above.
+
 Note 2: The javafx-controls are included in the annotation processor, so you don't need to add them to the
 annotationProcessorPaths.
